--- a/portainer/Dockerfile
+++ b/portainer/Dockerfile
@@ -1,1 +1,4 @@
 FROM portainer/portainer-ce
+
+COPY portainer/portainer.crt /etc/ssl/portainer.crt
+COPY portainer/portainer.key /etc/ssl/portainer.key
