--- a/pulp/cli.toml
+++ b/pulp/cli.toml
@@ -7,7 +7,7 @@ domain = "default"
 headers = []
 cert = ""
 key = ""
-verify_ssl = true
+verify_ssl = false
 format = "json"
 dry_run = false
 timeout = 0
