add hostdata in .env file

--- a/.env
+++ b/.env
@@ -2,6 +2,14 @@ COMPOSE_PROJECT_NAME=cicd-toolbox
 #Install mode can be local or vm
 install_mode=vm
 
+# KVMhost
+kvmuser=kvmuser
+kvmuser_pwd=Pa55w0rd
+
+#CMLhost
+cmluser=cmluser
+cmluser_pwd=Pa55w0rd
+
 # Set the domain name for the environment
 DOMAIN_NAME_TL=test
 DOMAIN_NAME_SL=provider
