working with portainer

--- a/keycloak/compose.yaml
+++ b/keycloak/compose.yaml
@@ -49,11 +49,10 @@ services:
       - '8080:8080'
       - '8443:8443'
     healthcheck:
-      test: 'curl --head --insecure -fSs https://keycloak.services.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:9000/health/ready' 
-      start_period: 60s
-      interval: 5s
+      test: ["CMD-SHELL", "exec 3<>/dev/tcp/127.0.0.1/9000;echo -e 'GET /health/ready HTTP/1.1\r\nhost: http://localhost\r\nConnection: close\r\n\r\n' >&3;if [ $? -eq 0 ]; then echo 'Healthcheck Successful';exit 0;else echo 'Healthcheck Failed';exit 1;fi;"]
+      start_period: 10s
+      interval: 30s
+      retries: 3
       timeout: 5s
-      retries: 5
     depends_on:
       - cicdtoolbox-db
-
