--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ install/log/
 vault/certs/
 vault/ids
 vault/*.txt
-lldap/data/
+msp_idp/data/
+cust1_idp/data/
 cicdtoolbox-db/ca.crt
 jtoken.txt
 buildnode/*_runner_token
