--- a/msp_idp/compose.yaml
+++ b/msp_idp/compose.yaml
@@ -1,26 +1,26 @@
 volumes:
-  ldap_data: null
+  msp_idp_data: null
 
 secrets:
-  ldap_key:
-    file: ../vault/certs/ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem
-  ldap_crt:
-    file: ../vault/certs/ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
+  msp_idp_key:
+    file: ../vault/certs/msp-idp.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem
+  msp_idp_crt:
+    file: ../vault/certs/msp-idp.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
 
 services:
-  ldap:
-    container_name: ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+  msp_idp:
+    container_name: msp-idp.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
     build: .
     restart: unless-stopped
-    hostname: ldap
+    hostname: msp-idp
     expose:
       - "3890"
     ports:
       - "17170:17170"
     secrets:
-      - source: ldap_key
+      - source: msp_idp_key
         target: /data/key.pem
-      - source: ldap_crt
+      - source: msp_idp_crt
         target: /data/cert.crt
     volumes:
       - ./data:/data
@@ -29,19 +29,19 @@ services:
       - UID=1000
       - GID=1000
       - TZ=Europe/Amsterdam
-      - LLDAP_URL=http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:17170
-      - LLDAP_ADMIN_USERNAME=${ldap_admin_user}
+      - LLDAP_URL=http://msp-idp.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:17170
+      - LLDAP_ADMIN_USERNAME=${msp_idp_admin_user}
       - LLDAP_ADMIN_PASSWORD=${local_admin_password}
       - LLDAP_LDAP_ADMIN_PASS=${local_admin_password}
-      - LLDAP_HTTP_URL=http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
-      - LLDAP_JWT_SECRET =${LLDAP_JWT_SECRET}
+      - LLDAP_HTTP_URL=http://msp-idp.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - LLDAP_JWT_SECRET =${MSP_IDP_JWT_SECRET}
       - LLDAP_LDAP_BASE_DN=dc=${DOMAIN_NAME_SL},dc=${DOMAIN_NAME_TL}
-      - LLDAP_LDAP_USER_DN = ${ldap_admin_user}
-      - LLDAP_LDAP_USER_EMAIL=${ldap_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
+      - LLDAP_LDAP_USER_DN = ${msp_idp_admin_user}
+      - LLDAP_LDAP_USER_EMAIL=${msp_idp_admin_user}@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
       - LLDAP_LDAP_USER_PASS =${local_admin_password}
       - LLDAP_FORCE_LDAP_USER_PASS_RESET = FALSE
-      - LLDAP_DATABASE_URL=postgres://${ldap_db_user}:${ldap_db_pwd}@cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}/ldap
-      - LLDAP_KEY_SEED = ${LLDAP_KEY_SEED}
+      - LLDAP_DATABASE_URL=postgres://${msp_idp_db_user}:${msp_idp_db_pwd}@cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}/msp_idp
+      - LLDAP_KEY_SEED = ${MSP_IDP_KEY_SEED}
       - LLDAP_SMTP_OPTIONS__ENABLE_PASSWORD_RESET = false
       - LLDAP_SMTP_OPTIONS__SERVER = smtp.gmail.com
       - LLDAP_SMTP_OPTIONS__PORT = 587
@@ -62,7 +62,7 @@ services:
       internal:
         ipv4_address: 172.16.8.11
     healthcheck:
-      test: "curl --insecure -fSs http://ldap.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:17170/login"
+      test: "curl --insecure -fSs http://msp-idp.iam.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:17170/login"
       start_period: 60s
       interval: 5s
       timeout: 5s
